<resources>
    <string name="app_name">tanam.an</string>
    <string name="title_cart">Cart</string>
    <string name="title_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">Epsilon</string>
    <string name="title_email">product@epsilon.co.id</string>
    <string name="title_hint_search">Belanja apa hari ini?</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_new_product">Produk Baru</string>
    <string name="title_creadit">Created by Epsilon Corp</string>
    <string name="website">www.epsilon.co.id</string>
    <string name="text_zero">0</string>
    <string name="title_address">Purwokerto , Banyumas</string>
    <string name="title_informasi">Informasi Penjual</string>
    <string name="large_text">Epsilon merupakan sebuah toko online terpercaya yang menyediakan peralatan dan bahan agrikultur. Semua barang yang berkaitan dengan agrikultur sperti benih, tanaman dan peralatannya tersedia disini.</string>
    <string name="title_product_sell">Produk yang di jual</string>
    <string name="text_none">-</string>
    <string name="title_seller">Informasi Penjual</string>
    <string name="title_buy">Beli</string>
    <string name="title_tanam">Plants</string>
    <string name="title_tools">Tools</string>
    <string name="title_activity_detail">ActivityDetail</string>
    <string name="title_activity_about"></string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_account">Have"nt Account?</string>
    <string name="register">SignUp</string>
    <string name="signup">SignUp</string>
    <string name="sign">Register</string>
    <string name="have_account1">Have Account</string>
    <string name="signin">SignIn</string>


    <string-array name="data_price">
        <item>
            Rp 25.000
        </item>
        <item>
            Rp 50.000
        </item>
        <item>
            Rp 20.000
        </item>
        <item>
            Rp 7.000
        </item>
        <item>
            Rp 35.000
        </item>
        <item>
            Rp 50.000
        </item>
        <item>
            RP 1.000.000
        </item>
    </string-array>

    <string-array name="data_name">
        <item>
            Semprotan
        </item>
        <item>
            Kaktus Mini
        </item>
        <item>
            Media Tanam
        </item>
        <item>
            Tomat Jumbo
        </item>
        <item>
            Tanaman Dollar
        </item>
        <item>
            Monstera
        </item>
        <item>
            Janda Bolong
        </item>
    </string-array>

    <string-array name="data_photo">
        <item>
            https://www.static-src.com/wcsstore/Indraprastha/images/catalog/full//97/MTA-3226696/jetspray_jetspray-semprotan-air--1-liter-_full02.jpg
        </item>
        <item>
            https://i.pinimg.com/736x/25/d1/42/25d1425b39b3349bbb3ca88f1cec86d2.jpg
        </item>
        <item>
            https://ecs7.tokopedia.net/img/cache/700/product-1/2020/9/1/114189101/114189101_5236e59a-8a18-44f4-affc-4cfe70b21e19_676_676.jpg
        </item>
        <item>
            https://i.pinimg.com/564x/85/c1/6e/85c16eba23917875322e3639bf0d61ef.jpg
        </item>
        <item>https://id-test-11.slatic.net/p/af772a64d4acdf853835b4700c31fd9d.jpg_340x340q80.jpg_.webp
        </item>
        <item>
            https://i.pinimg.com/originals/66/77/5f/66775f88bcc649e8f8ce4d113eb22af3.jpg
        </item>
        <item>
            https://belibibit.id/wp-content/uploads/2020/07/janda-bolong-1.jpg
        </item>
    </string-array>
    <string name="title_activity_content_home">ScrollingActivity</string>
</resources>