<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Ui.splash.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cactus2"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/putih"
            android:layout_marginTop="12dp"
            android:textSize="@dimen/size_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_creadit"
            android:textColor="@color/putih"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/size_subtitle"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/putih"
            android:textAlignment="center"
            android:textSize="@dimen/size_desc"/>
    </LinearLayout>

</RelativeLayout>