<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Ui.signup.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/signup"
            android:textColor="@color/teal_700"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_700"
            android:autofillHints=""
            app:layout_constraintBottom_toBottomOf="@id/tv_email"
            />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/inputEmail"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_700"
            android:autofillHints=""
            app:layout_constraintBottom_toBottomOf="@id/tv_password"
            />


        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sign"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/putih"
            android:background="@color/teal_700"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/inputPassword"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_dn_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/have_account1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/signin"
                android:textSize="12sp"
                android:textColor="@color/teal_700"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>