<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:id="@+id/scrollview"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Ui.Home.HomeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/bg_search"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/colorPrimary" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/activity_margin"
            android:background="@drawable/bg_input"
            android:drawableEnd="@drawable/ic_search"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/title_hint_search"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="@dimen/size_subtitle" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/content_carol"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/title_kategori"
                android:textSize="@dimen/size_title" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_gravity="center">

                <include layout="@layout/menu_kategori" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/activity_margin"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/title_new_product"
                android:textSize="@dimen/size_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/adapter_produk"
                />
        </LinearLayout>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
